@@ -24,7 +24,7 @@ class BaseProfile(models.Model):
 
     user = models.ForeignKey(User, unique=True)
     date = models.DateTimeField(default=datetime.datetime.now)
-    country = CountryField()
+    country = CountryField(null=True, blank=True)
     latitude = models.DecimalField(max_digits=10, decimal_places=6, blank=True, null=True)
     longitude = models.DecimalField(max_digits=10, decimal_places=6, blank=True, null=True)
     location = models.CharField(max_length=255, blank=True)
